I did thing whic I do not remember

--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -29,6 +29,9 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+    flatDir {
+        dirs 'libs', 'C:/navx-micro/android/libs'
+    }
 }
 
 allprojects {
@@ -48,4 +51,5 @@ dependencies {
     compile(name: 'ModernRobotics-release', ext: 'aar')
     compile(name: 'Analytics-release', ext: 'aar')
     compile(name: 'WirelessP2p-release', ext: 'aar')
+    compile (name:'navx_ftc-release', ext:'aar')
 }
